Bug#34567 - Falcon deadlock between ALTERs of temporary and non-temporary tables

Added Database::syncDDL to serialize DDL operations.