storage/falcon/Table.cpp
@@ -1481,8 +1481,8 @@ void Table::drop(Transaction *transaction)
 
 
 	Sync sync(&database->syncSysConnection, "Table::drop");
-	//sync.lock(Shared);
-	sync.lock(Exclusive);
+	sync.lock(Shared);
+	
 	Transaction *sysTransaction = database->getSystemTransaction();
 
 	for (Index *index = indexes; index; index = index->next)
@@ -1517,6 +1517,7 @@ void Table::drop(Transaction *transaction)
 		view->drop(database);
 			
 	sync.unlock();
+	
 	database->commitSystemTransaction();
 }
 
